--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,25 +1,16 @@
 services:
-  image_test:
+  rtdetrv2-deploy:
     shm_size: '8gb'
     runtime: nvidia
-    labels:
-      - "role=development"
-    # build: 
-    #   dockerfile: "deploy.Dockerfile"
-    #   args:
-    #     IMAGE: supervisely/yolov8:1.0.31
-    image: supervisely/yolov8:1.0.31
-    cap_add:
-      - NET_ADMIN
+    image: supervisely/rt-detrv2:1.0.3
     env_file: ~/supervisely.env
     environment:
-      - DEBIAN_FRONTEND=noninteractive
-      - ENV=production
-    # ports:
-      # - "9702:22"
-      # - "8000:8000"
+      - LOCAL_DEPLOY=True
+      - TEAM_ID=440
+      - PYTHONPATH=/app:/app/supervisely_integration
     volumes:
-      - "./yolov8:/app"
+      - ./RT-DETRv2:/app
+      - ~/volume/data:/data
     entrypoint:
-      "python3 -m uvicorn src.main:m.app --app-dir /app/yolov8/serve --host 0.0.0.0 --port 8000 --ws websockets"
-    working_dir: "/app"
+      "python3 supervisely_integration/serve/main.py --model RT-DETRv2-S --predict-project-id 32510"
+    working_dir: /app
