--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  action-recognition:
+  mvd-cu118-py38-torch-1.11:
     shm_size: '8gb'
     runtime: nvidia
     labels:
@@ -20,7 +20,7 @@ services:
         # IMAGE: supervisely/cotracker:1.0.1
         # IMAGE: supervisely/detectron2:1.0.5
         # IMAGE: paddlepaddle/paddle:2.4.2-gpu-cuda11.7-cudnn8.4-trt8.4
-        # IMAGE: supervisely/hrda:1.0.0
+        # IMAGE: supervisely/hrda:1.0.6
         # IMAGE: supervisely/mmseg:1.3.4
         # IMAGE: supervisely/mmdet-3.0:1.0.10
         # IMAGE: supervisely/mmcls:1.0.1
@@ -29,8 +29,9 @@ services:
         # IMAGE: supervisely/langchain:1.0.0
         # IMAGE: supervisely/rt-detr:1.0.0
         # IMAGE: supervisely/yolov8:1.0.40
-        IMAGE: supervisely/rt-detrv2:1.0.7
+        # IMAGE: supervisely/rt-detrv2:1.0.7
         # IMAGE: supervisely/apply-nn-to-videos-project:1.0.5
+        IMAGE: supervisely/mvd:dev
     cap_add:
       - NET_ADMIN
     env_file: ~/supervisely.env
